Added secret-passing to build docs yaml

--- a/.github/workflows/build_docs.yaml
+++ b/.github/workflows/build_docs.yaml
@@ -25,3 +25,5 @@ jobs:
       run: ./.github/workflows/build_helper.sh
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        QUARTZY_USERNAME: ${{ secrets.QUARTZY_USERNAME }}
+        QUARTZY_PASSWORD: ${{ secrets.QUARTZY_PASSWORD }}
