--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,7 @@ gazpacho==1.1
 Sphinx==4.4.0
 sphinx-rtd-theme==0.5.1
 sphinxcontrib-lunrsearch==0.4
-sphinxcontrib-applehelp==1.0.7
+sphinxcontrib-applehelp==1.0.4
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.1
+sphinxcontrib-jsmath==1.0.1
