--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,27 @@ gazpacho==1.1
 Sphinx==4.4.0
 sphinx-rtd-theme==0.5.1
 sphinxcontrib-lunrsearch==0.4
+
 sphinxcontrib-applehelp==1.0.4
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.1
 sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+Pygments==2.17.2
+alabaster==0.7.13
+babel==2.14.0
+certifi==2023.11.17
+charset-normalizer==2.0.12
+docutils==0.17.1
+gazpacho==1.1
+idna==3.6
+imagesize==1.4.1
+packaging==23.2
+six==1.16.0
+snowballstemmer==2.2.0
+typing-extensions==4.9.0
+urllib3==1.26.18
